2009-08-24  Cameron McCormack  <cam@mcc.id.au>

Reviewed by Darin Adler.

        Modifying <text rotate=""> doesn't clear the corresponding SVGAnimatedNumberList
        https://bugs.webkit.org/show_bug.cgi?id=28673

        * svg/dom/resources/text-rotate-live.js: Added.
        (getRotate):
        (getAndSetRotate):
        * svg/dom/text-rotate-live-expected.txt: Added.
        * svg/dom/text-rotate-live.html: Added.
2009-08-24  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Darin Adler.

        Modifying <text rotate=""> doesn't clear the corresponding SVGAnimatedNumberList
        https://bugs.webkit.org/show_bug.cgi?id=28673

        Test: svg/dom/text-rotate-live.html

        * svg/SVGNumberList.cpp:
        (WebCore::SVGNumberList::parse): Clear the list before adding the parsed
        numbers.

Canonical link: https://commits.webkit.org/39298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47720 268f45cc-cd09-0410-ab3c-d52691b4dbfc